syntax = "proto3";

package net.devh.boot.grpc.example;
option java_multiple_files = true;
option java_outer_classname = "WebSocketProto";
option java_package = "com.microservice.websocket_proto";

service WebSocketService {
  rpc createPreSeatReservation(CreatePreSeatReservationRequest) returns (CreatePreSeatReservationResponse);
  rpc declareQueue(DeclareQueueRequest) returns (DeclareQueueResponse);
  rpc removeQueue(RemoveQueueRequest) returns (RemoveQueueResponse);
}

message RemoveQueueRequest {
  int32 accountId = 1;
}
message RemoveQueueResponse {
  int32 status = 1;
  string message = 2;
}

message DeclareQueueRequest {
  int32 accountId = 1;
}

message DeclareQueueResponse {
  int32 status = 1;
  string message = 2;
}



message CreatePreSeatReservationRequest {
  int32 showtimeId = 1;
  repeated int32 seats = 2;
}

message CreatePreSeatReservationResponse {
  int32 status = 1;
  string message = 2;
}